Added intro animation w/ dynamic typing

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Nick Schrimpf
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,35 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Nick Schrimpf</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-row class="ion-align-items-center">
+    <ion-col>
+      <div class="intro">
+        <span #greeting>Hi, I'm</span>
+        <h1>Nick Schrimpf</h1>
+        <span>a Colorado-Based...</span>
+        <ion-row>
+          <span #dynamicTitle></span>
+        </ion-row>
 
-  <div id="container">
+      </div>
+    </ion-col>
+  </ion-row>
+
+
+
+
+
+
+
+
+  <!-- GET READY TO DELETE -->
+  <!-- <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  </div> -->
+
+
 </ion-content>
