updating light theme with a background

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -72,8 +72,10 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-
+  --ion-background-color:radial-gradient(rgb(217, 214, 210),rgba(36, 37, 38,.3)), url("../assets/bg-image/topography.png");
+  --ion-font-family:'Nunito', sans-serif;
 }
+
 
 @media (prefers-color-scheme: dark) {
   /*
@@ -144,6 +146,7 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
   }
 
   /*
