added pages show tools and current projects

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,23 +21,13 @@
         <ion-row>
           <span #dynamicTitle></span>
         </ion-row>
-
       </div>
     </ion-col>
   </ion-row>
-
-
-
-
-
-
-
-
-  <!-- GET READY TO DELETE -->
-  <!-- <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div> -->
-
-
+  <app-tools></app-tools>
+  <app-my-work></app-my-work>
 </ion-content>
+
+
+
+
