--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,16 +4,16 @@
   align-items: center;
   justify-content: center;
   line-height: 1;
-  transform: translateY(25vh);
+  min-height: 90vh;
 }
 
 .into,h1{
-  font-size: xx-large;
+  font-size: 2.5rem;
   font-weight: 600;
-  line-height: .5;
+  line-height: .75;
 }
 .intro,span{
-  font-size:x-large;
+  font-size:1.5rem;
   font-weight: 300;
 }
 
