--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,20 +1,33 @@
+ion-toolbar{
+  --background: filter(blur(12px));
+}
 .intro{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   line-height: 1;
-  min-height: 90vh;
+  min-height: 100vh;
 }
 
-.into,h1{
+.into, h1{
   font-size: 2.5rem;
   font-weight: 600;
   line-height: .75;
 }
-.intro,span{
+.intro, span{
   font-size:1.5rem;
   font-weight: 300;
+}
+ion-img{
+  height: 196px;
+  width: 200px;
+  opacity: 0.2;
+}
+.home{
+  margin-top: 50px;
+  transform: translateY(-300px);
+  align-self: start;
 }
 
 
