added project title description and photo

--- a/src/app/home/my-work/my-work.page.html
+++ b/src/app/home/my-work/my-work.page.html
@@ -1,10 +1,61 @@
-<ion-card color="primary">
-  <ion-card-header>
-    <ion-card-title>Under Construction
-      <ion-icon name="sad-outline"></ion-icon>
-    </ion-card-title>
-  </ion-card-header>
-
+<ion-card>
+  <ion-row>
+      <ion-col>
+      <ion-img src="../../../assets/mystuff.png"></ion-img>
+      </ion-col>
+    <ion-col>
+        <ion-card-header>
+          <a href="https://mystuff-c0313.web.app" target="_blank">
+            <ion-card-title>
+              My Stuff
+              <ion-icon name="logo-angular"></ion-icon>
+              <ion-icon name="logo-ionic"></ion-icon>
+              <ion-icon name="logo-firebase"></ion-icon>
+            </ion-card-title>
+          </a>
+          <ion-card-subtitle>
+            A home inventory app
+          </ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <p>
+            My Stuff is a home inventory app that allows you to keep track of your belongings. You can add items to your inventory, take pictures of them, and keep track of their value. You can also add note
+          </p>
+        </ion-card-content>
+      </ion-col>
+  </ion-row>
 </ion-card>
+<ion-card>
+  <ion-row>
+      <ion-col>
+      <ion-img src="../../../assets/matchingGame.png"></ion-img>
+      </ion-col>
+    <ion-col>
+        <ion-card-header>
+          <a href="https://basicmatchgame.web.app" target="_blank">
+            <ion-card-title>
+              basic match game
+              <ion-icon name="logo-html5"></ion-icon>
+              <ion-icon name="logo-css3"></ion-icon>
+              <ion-icon name="logo-javascript"></ion-icon>
+            </ion-card-title>
+          </a>
+          <ion-card-subtitle>
+            A basic matching game
+          </ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <p>
+            A basic matching game that uses HTML, CSS, and JavaScript. Get to know me a little better by playing this game.
+          </p>
+        </ion-card-content>
+      </ion-col>
+  </ion-row>
+</ion-card>
+
+
+
+
+
 
 
