changed the width of cards

--- a/src/app/home/tools/tools.page.html
+++ b/src/app/home/tools/tools.page.html
@@ -1,5 +1,5 @@
 <ion-row>
-  <ion-col size-md="6" offset-md="3">
+  <ion-col size-md="4" offset-md="2" size="10" offset="1">
     <!-- LANGUAGES -->
     <ion-card color="secondary">
       <ion-card-header color="primary">
