--- a/src/app/home/my-work/my-work.page.html
+++ b/src/app/home/my-work/my-work.page.html
@@ -1,13 +1,32 @@
+<ion-row>
+  <ion-col>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          My Work
+          <ion-icon src="../../../assets/navigation-icons/Path.svg"></ion-icon>
+        </ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>
+          Here are some of the projects I have worked on. Click on the title to see the project.
+        </p>
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+</ion-row>
 <ion-card>
   <ion-row>
-      <ion-col>
+      <ion-col class="ion-padding">
       <ion-img src="../../../assets/mystuff.png"></ion-img>
       </ion-col>
-    <ion-col>
+    <ion-col size="9">
         <ion-card-header>
           <a href="https://mystuff-c0313.web.app" target="_blank">
             <ion-card-title>
               My Stuff
+            </ion-card-title>
+            <ion-card-title>
               <ion-icon name="logo-angular"></ion-icon>
               <ion-icon name="logo-ionic"></ion-icon>
               <ion-icon name="logo-firebase"></ion-icon>
@@ -27,14 +46,16 @@
 </ion-card>
 <ion-card>
   <ion-row>
-      <ion-col>
+      <ion-col class="ion-padding">
       <ion-img src="../../../assets/matchingGame.png"></ion-img>
       </ion-col>
-    <ion-col>
+    <ion-col size="9">
         <ion-card-header>
           <a href="https://basicmatchgame.web.app" target="_blank">
             <ion-card-title>
-              basic match game
+              match game
+            </ion-card-title>
+            <ion-card-title>
               <ion-icon name="logo-html5"></ion-icon>
               <ion-icon name="logo-css3"></ion-icon>
               <ion-icon name="logo-javascript"></ion-icon>
