--- a/src/app/home/tools/tools.page.html
+++ b/src/app/home/tools/tools.page.html
@@ -1,8 +1,8 @@
 <ion-row>
-  <ion-col size-md="4" offset-md="2" size="10" offset="1">
+  <ion-col size-md="8" offset-md="2" size="10" offset="1">
     <!-- LANGUAGES -->
-    <ion-card color="secondary">
-      <ion-card-header color="primary">
+    <ion-card color="tertiary">
+      <ion-card-header color="tertiary">
         <ion-card-title>Languages</ion-card-title>
       </ion-card-header>
       <ion-card-content>
@@ -29,11 +29,15 @@
       </ion-card-content>
     </ion-card>
     <!-- TOOLS -->
-    <ion-card>
-      <ion-card-header color="secondary">
-        <ion-card-title>Tools</ion-card-title>
+    <ion-card color="tertiary">
+      <ion-card-header color="tertiary">
+        <ion-card-title>
+          <ion-icon  src="../assets/navigation-icons/Wrench.svg"></ion-icon>
+          Tools
+        </ion-card-title>
+
       </ion-card-header>
-      <ion-card-content color="medium">
+      <ion-card-content >
         <ion-list>
           <ion-item>
             <ion-label>VS Code</ion-label>
@@ -59,11 +63,11 @@
       </ion-card-content>
     </ion-card>
     <!-- SOFT SKILLS -->
-    <ion-card>
+    <ion-card color="tertiary">
       <ion-card-header color="tertiary">
         <ion-card-title>Soft Skills</ion-card-title>
       </ion-card-header>
-      <ion-card-content color="medium">
+      <ion-card-content >
       <ion-item>
         <ion-label>Communication</ion-label>
         <ion-icon name="chatbubbles" slot="end"></ion-icon>
