--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,14 @@
-ion-toolbar{
+ion-toolbar {
   --background: filter(blur(12px));
 }
-.intro{
+body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+ion-fab {
+  transition: opacity 0.5s ease-in-out;
+}
+.intro {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,24 +17,29 @@ ion-toolbar{
   min-height: 100vh;
 }
 
-.into, h1{
+.into,
+h1 {
   font-size: 2.5rem;
   font-weight: 600;
-  line-height: .75;
+  line-height: 0.75;
 }
-.intro, span{
-  font-size:1.5rem;
+.intro,
+span {
+  font-size: 2.5rem;
   font-weight: 300;
 }
-ion-img{
-  height: 196px;
-  width: 200px;
-  opacity: 0.2;
+ion-img {
+  position: relative;
+  width: 100%;
+  height: 75px;
+  object-fit: cover;
+  bottom: 0;
+  left: 0;
+  opacity: 0.5;
 }
-.home{
-  margin-top: 50px;
-  transform: translateY(-300px);
-  align-self: start;
+.page-icon {
+  position: fixed;
+  bottom: 75px;
+  left: 10%;
+  transition: all 0.5s ease-in-out;
 }
-
-
