--- a/src/app/home/work-history/work-history.page.scss
+++ b/src/app/home/work-history/work-history.page.scss
@@ -2,28 +2,33 @@
   width: 100%;
   height: 100vh;
 }
-swiper-slide{
-  h1{
+swiper-slide {
+  h1 {
     font-size: 1.75rem;
     margin-top: 10vh;
-    padding-left: .5rem;
+    padding-left: 0.5rem;
     letter-spacing: -1.5px;
+    font-weight: 800;
   }
-  p{
+  h3 {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+    padding-left: 0.5rem;
+    font-weight: 600;
+  }
+  p {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
-  ul{
+  ul {
     list-style: none;
     padding-left: 1rem;
-    li{
+    li {
       margin-bottom: 1rem;
-
     }
-    p{
+    p {
       font-size: 1.25rem;
       margin-bottom: 1rem;
     }
   }
-
 }
